--- a/cleanupCrew/frontend/package.json
+++ b/cleanupCrew/frontend/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1",
     "sass": "^1.86.1"
   },
   "devDependencies": {
