--- a/cleanupCrew/backend/package.json
+++ b/cleanupCrew/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "atob": "^2.1.2",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
