--- a/cleanupCrew/frontend/package.json
+++ b/cleanupCrew/frontend/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
+    "react-router-dom": "^7.5.0",
     "sass": "^1.86.1"
   },
   "devDependencies": {
