--- a/cleanupCrew/frontend/package.json
+++ b/cleanupCrew/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "react": "^19.0.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "sass": "^1.86.1"
