--- a/cleanupCrew/frontend/package.json
+++ b/cleanupCrew/frontend/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.8.4",
     "express": "^5.1.0",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.9.4",
     "p-sleep": "^1.1.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.5.0",
     "sass": "^1.86.1",
     "swiper": "^11.2.6"
